clusters/homelab/apps/wazuh/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: wazuh-indexer
  namespace: wazuh
spec:
  selector: {app.kubernetes.io/name: wazuh-indexer}
  ports:
    - name: https-indexer
      port: 9200
      targetPort: 9200
---
apiVersion: v1
kind: Service
metadata:
  name: wazuh-manager
  namespace: wazuh
spec:
  selector: {app.kubernetes.io/name: wazuh-manager}
  ports:
    - name: tcp-agents
      port: 1514
      targetPort: 1514
    - name: tcp-enrollment
      port: 1515
      targetPort: 1515
    - name: https-api
      port: 55000
      targetPort: 55000
    - name: tcp-syslog
      port: 5140
      targetPort: 5140
---
apiVersion: v1
kind: Service
metadata:
  name: wazuh-dashboard
  namespace: wazuh
spec:
  selector: {app.kubernetes.io/name: wazuh-dashboard}
  ports:
    - name: http-dashboard
      port: 5601
      targetPort: 5601
